main section complete

--- a/index.html
+++ b/index.html
@@ -86,12 +86,134 @@
         <p class="mb-5">
           There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.
         </p>
-        <input class=" py-1  rounded-md" placeholder="search your Services" type="text">
-        <input class=" font-bold bg-[#B68C5A] py-1 mx-2 rounded-md" placeholder="search" type="text">
+        <input class="px-3 py-1  rounded-md" placeholder="search your Services" type="text">
+        <input class="w-20 px-5 font-bold bg-[#B68C5A] py-1 mx-2 rounded-md" placeholder="search" type="text">
     </div>
   </div>
   
   </header>
+  <!-- Main Section -->
+   <main class="md:container mx-auto">
+    <section class="mt-20">
+      <!-- title  -->
+       <div class="text-center mx-auto ">
+        <h1 class="text-5xl font-bold text-gray-800">The Legal Practice Area</h1>
+        <br>
+        <p class="text-gray-500 text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+       </div>
+       <!-- box section -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 my-10 ">
+          <!-- box-1 -->
+          <div class="card mx-auto my-5  bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/business.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Business low</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+          <!-- box-2 -->
+          <div class="card mx-auto my-5 bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/criminal.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Criminal Law</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+          <!-- box-3 -->
+          <div class="card mx-auto my-5 bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/child.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Child Support</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+          <!-- box-4 -->
+          <div class="card mx-auto my-5 bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/education.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Education Law</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+          <!-- box-5 -->
+          <div class="card mx-auto my-5 bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/divorce.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Divorce Law</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+          <!-- box-6 -->
+          <div class="card mx-auto my-5 bg-base-100 w-96 shadow-xl border-4 rounded-xl">
+            <figure class="px-10 pt-10">
+              <img
+                src="images/tax.png"
+                alt="Shoes"
+                class="rounded-xl" />
+            </figure>
+            <div class="card-body items-center text-center">
+              <h2 class="card-title text-3xl font-bold">Tax Law</h2>
+              <br>
+              <p class="text-gray-500 text-xl">There are many variations of <br> passages of Lorem Ipsum <br>available, but the majority have <br> suffered alteration in some form, <br> by injected humour.</p>
+              <br>
+              <div class="card-actions ">
+                <button class="bg-[#B68C5A] text-white text-2xl rounded-full "><i class="fa-solid fa-arrow-right"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+   </main>
     
 </body>
 </html>
