main section done

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   </header>
   <!-- Main Section -->
    <main class="md:container mx-auto">
+    <!-- low section start -->
     <section class="mt-20">
       <!-- title  -->
        <div class="text-center mx-auto ">
@@ -213,6 +214,97 @@
           </div>
         </div>
     </section>
+    <!-- our cilent say section start -->
+     <section class="mt-20">
+      <!-- title -->
+      <div class="text-center mx-auto ">
+        <h1 class="text-5xl font-bold text-gray-800">What Our Client Say</h1>
+        <br>
+        <p class="text-gray-500 text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+       </div>
+       <!-- bannar secction -->
+        <div>
+          <div class="carousel mt-20 mx-auto h-[700px] w-full">
+            <!-- slide-1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+              <img
+                src="images/slider-1.jpg"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- slide-2 -->
+            <div id="slide2" class="carousel-item relative w-full">
+              <img
+                src="images/slider-2.jpg"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- slide-3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+              <img
+                src="images/slider-3.jpg"
+                class="w-full" />
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            
+          </div>
+        </div>
+     </section>
+     <!-- frequently asked section -->
+      <section class="mt-20">
+        <!-- title -->
+      <div class="text-center mx-auto ">
+        <h1 class="text-5xl font-bold text-gray-800">Frequently Asked Any Questions</h1>
+        <br>
+        <p class="text-gray-500 text-xl">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
+       </div>
+       <div class="lg:flex mx-auto justify-center space-x-10 mt-10">
+        <!-- text content -->
+       <div class="mt-20 ">
+        <div class="collapse collapse-plus   bg-base-200">
+          <input type="radio" name="my-accordion-3" checked="checked" />
+          <div class="collapse-title text-2xl font-medium">1. Are application fee waivers available?</div>
+          <div class="collapse-content">
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, . </p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus  mt-3 bg-base-200">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-2xl font-medium">2. Are application fee waivers available?</div>
+          <div class="collapse-content">
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, . </p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus  mt-3 bg-base-200">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-2xl font-medium">3. Are application fee waivers available?</div>
+          <div class="collapse-content">
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, . </p>
+          </div>
+        </div>
+        <div class="collapse collapse-plus  mt-3 bg-base-200">
+          <input type="radio" name="my-accordion-3" />
+          <div class="collapse-title text-2xl font-medium">4. Are application fee waivers available?</div>
+          <div class="collapse-content">
+            <p>There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br>form, by injected humour, . </p>
+          </div>
+        </div>
+       </div>
+       <!-- image content -->
+        <div class="">
+          <img src="images/faq.png" alt="">
+        </div>
+       </div>
+      </section>
    </main>
     
 </body>
